fix issue with navbar which container was to small on iPhone 4

--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,9 @@ footer a:hover, footer a:focus, footer a:active {
 @media(orientation: portrait), (max-width: 375px) and (max-height: 375px) /* because otherwise logo and navbar fot fit into one line */ { 
 	
 	/* logo above navbar */
-	header h1 {
+	header .inner_wrapper { margin: auto; } /* otherwise navbar doesn't look good on iPhone 4 */
+	
+	header h1 { 
 		display: block;
 		float: none;
 		margin: 0 auto;
@@ -284,7 +286,7 @@ footer a:hover, footer a:focus, footer a:active {
 	footer p {padding: 10px;}
 }
 
-@media(max-width: 585px) and (orientation: portrait), (max-width: 375px) and (max-height: 375px) /* otherwise logo and navbar too far away from each other{ /**/
+@media(max-width: 585px) and (orientation: portrait), (max-width: 375px) and (max-height: 375px) /* otherwise logo and navbar too far away from each other */ { 
 	
 	body {padding-top: 81px;}
 	header h1 {padding-bottom: 5px;}
